--- a/Code/Demixing/Demixing Minicon Plots and Code Part 0.ipynb
+++ b/Code/Demixing/Demixing Minicon Plots and Code Part 0.ipynb
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 93,
    "metadata": {
     "collapsed": false
    },
@@ -643,33 +643,196 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 97,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "posts = {}\n",
+    "for s_i in range(90):\n",
+    "    file_name = 'output_post/post_' + str(i+1) + '.pkl'\n",
+    "    if os.path.isfile(file_name):\n",
+    "        delta_s = s_i / 3\n",
+    "        pkl_file = open(file_name, 'rb')\n",
+    "        p, r, c, i = pickle.load(pkl_file)\n",
+    "        posts[c, delta_s] = p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-68-3d3c1db5204b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmultiprocessing\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mmp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mpool\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mPool\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprocesses\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m60\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mresults\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mpool\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mget_posteriors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpost_func\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mr\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mresps\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0mresults\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m//anaconda/lib/python2.7/multiprocessing/pool.pyc\u001b[0m in \u001b[0;36mapply\u001b[0;34m(self, func, args, kwds)\u001b[0m\n\u001b[1;32m    242\u001b[0m         '''\n\u001b[1;32m    243\u001b[0m         \u001b[0;32massert\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_state\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mRUN\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 244\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply_async\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfunc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    245\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    246\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0miterable\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mchunksize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m//anaconda/lib/python2.7/multiprocessing/pool.pyc\u001b[0m in \u001b[0;36mget\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    559\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    560\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtimeout\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 561\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwait\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtimeout\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    562\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_ready\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    563\u001b[0m             \u001b[0;32mraise\u001b[0m \u001b[0mTimeoutError\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m//anaconda/lib/python2.7/multiprocessing/pool.pyc\u001b[0m in \u001b[0;36mwait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    554\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    555\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_ready\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 556\u001b[0;31m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_cond\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwait\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtimeout\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    557\u001b[0m         \u001b[0;32mfinally\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    558\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_cond\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrelease\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m//anaconda/lib/python2.7/threading.pyc\u001b[0m in \u001b[0;36mwait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    338\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m    \u001b[0;31m# restore state no matter what (e.g., KeyboardInterrupt)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    339\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mtimeout\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 340\u001b[0;31m                 \u001b[0mwaiter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0macquire\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    341\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0m__debug__\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    342\u001b[0m                     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_note\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"%s.wait(): got it\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-28.25227198 -26.0783597  -29.13269856 ..., -24.19848548 -27.67333624\n",
+      " -23.92919243]\n",
+      "40 trials per contrast level\n",
+      "{'var_s1': array([ 10.02719864,  13.57938305,  10.18881273,  15.35320011,\n",
+      "         9.92542377,   8.73841609,  13.5532021 ,   7.4075507 ,\n",
+      "        19.82254523,   6.60182673,  10.91104413,  10.43637532,\n",
+      "        13.00056325,   9.63121981,  13.42775892,  11.25597343,\n",
+      "        15.15762951,  15.39946474,   8.68434282,   8.18976316,\n",
+      "        10.49936786,   9.49821351,  11.00819366,  10.48726616,\n",
+      "        14.11987687,   9.52349402,  13.95857104,  14.13976886,\n",
+      "        13.69102293,  14.79479563,   8.64474225,  11.8561958 ,\n",
+      "        11.73480233,   9.48192256,  12.2676478 ,  11.24749057,\n",
+      "        10.54574751,  11.19335677,  12.97359198,  10.53390033]), 'mean_s1': array([-31.4199926 , -29.62917108, -24.09271536, -27.81987493,\n",
+      "       -26.19026243, -25.20169875, -26.70929618, -31.22614109,\n",
+      "       -31.47175041, -34.31121231, -28.96156587, -31.96678344,\n",
+      "       -32.59101277, -26.18998739, -26.67456342, -30.23641675,\n",
+      "       -31.70915932, -32.50064772, -21.71534062, -29.43725163,\n",
+      "       -32.70246313, -23.69867675, -32.65928863, -24.90044063,\n",
+      "       -26.81646823, -28.6679632 , -32.46863126, -33.08027459,\n",
+      "       -34.7092647 , -34.36352683, -26.34600899, -28.26650209,\n",
+      "       -35.04056069, -34.8551323 , -30.64173745, -32.2281079 ,\n",
+      "       -38.69393813, -23.10274835, -29.00187485, -32.95364804]), 'mean_s2': array([-11.15110471, -12.98190942, -16.63833366, -12.75736327,\n",
+      "       -18.0554622 , -18.6170213 , -16.12569177, -11.44901575,\n",
+      "       -16.32619926, -13.93837799, -15.66003656, -17.22749691,\n",
+      "       -18.6664141 , -19.08427004, -16.7467258 , -13.92901638,\n",
+      "       -17.28145534,  -8.74912276, -16.47964325, -13.93983663,\n",
+      "        -6.72011904, -14.24332821, -16.29415371, -16.47573911,\n",
+      "       -15.78420959, -20.38280712, -13.74020392, -13.00475248,\n",
+      "       -17.40385444, -14.62112069, -20.76851199, -18.68775899,\n",
+      "       -11.36603214, -15.90753738, -14.35119576, -14.27560858,\n",
+      "       -10.96290111, -16.34325921, -16.04698975, -15.64211883]), 'var_s2': array([ 10.53209263,  11.49920029,   8.70864419,  10.53905932,\n",
+      "        10.5636697 ,   9.22604285,  10.62565659,  10.84502265,\n",
+      "        10.9000927 ,   7.04790479,  13.26937026,  19.51965676,\n",
+      "        11.08654988,  10.34667834,  11.87091724,  10.64527866,\n",
+      "        13.55874366,  10.21421751,   8.90067403,   9.18431269,\n",
+      "        12.56627485,  10.43969062,  16.02076414,  10.11089715,\n",
+      "        14.66110097,   9.66457882,   6.65123817,   8.96445344,\n",
+      "        11.16987186,   7.36377813,   9.11782738,  11.05166603,\n",
+      "        11.0345938 ,  10.4139157 ,  14.46865626,   8.44904709,\n",
+      "        38.19891018,  10.31044339,  11.40737675,   7.61506414])}\n"
      ]
     }
    ],
    "source": [
-    "import multiprocessing as mp\n",
-    "pool = mp.Pool(processes=60)\n",
-    "results = [pool.apply(get_posteriors, args=(r, post_func)) for r in resps]\n",
-    "print results"
+    "print posts[2, 15]['mean_s2']\n",
+    "c = 2\n",
+    "delta_s = 15\n",
+    "s1=-30\n",
+    "post_func = posterior_setup(low=c, high=c, discrete_c=1, num_s=60, r_max=1)\n",
+    "test_data = generate_testset(40, stim_0=s1, stim_1=s1+delta_s, discrete_c=1, low=c, high=c, r_max=1)\n",
+    "r, _, _ = test_data\n",
+    "p = get_posteriors_pool(r, post_func)\n",
+    "print p"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "s1 = -30\n",
+    "ndata = 900\n",
+    "num_deltas = 30\n",
+    "c = 2\n",
+    "post_stats = {'mean_s1': np.zeros(num_deltas), \n",
+    "                'mean_s2': np.zeros(num_deltas), \n",
+    "                'bias_s1': np.zeros(num_deltas), \n",
+    "                'bias_s2': np.zeros(num_deltas), \n",
+    "                'var_s1': np.zeros(num_deltas), \n",
+    "                'var_s2': np.zeros(num_deltas), \n",
+    "                'cov': np.zeros(num_deltas), \n",
+    "                'corr': np.zeros(num_deltas),\n",
+    "                }\n",
+    "for delta_s in range(num_deltas):\n",
+    "    post_means = np.array((posts[c, delta_s]['mean_s1'], posts[c, delta_s]['mean_s2']))\n",
+    "    stats = get_statistics(s1, s1 + delta_s, post_means)\n",
+    "    post_stats['mean_s1'][delta_s] = stats['mean_s1']\n",
+    "    post_stats['mean_s2'][delta_s] = stats['mean_s2']\n",
+    "    post_stats['bias_s1'][delta_s] = stats['bias_s1']\n",
+    "    post_stats['bias_s2'][delta_s] = stats['bias_s2']\n",
+    "    post_stats['var_s1'][delta_s] = stats['var_s1']\n",
+    "    post_stats['var_s2'][delta_s] = stats['var_s2']\n",
+    "    post_stats['cov'][delta_s] = stats['cov']\n",
+    "    post_stats['corr'][delta_s] = stats['corr']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'bias_s1': array([-3.26783133, -3.26783133, -3.26783133, -3.26783133, -3.26783133,\n",
+      "       -3.26783133, -3.26783133, -3.26783133, -3.26783133, -3.26783133,\n",
+      "       -3.26783133, -3.26783133, -3.26783133, -3.26783133, -3.26783133,\n",
+      "       -3.26783133, -3.26783133, -3.26783133, -3.26783133, -3.26783133,\n",
+      "       -3.26783133, -3.26783133, -3.26783133, -3.26783133, -3.26783133,\n",
+      "       -3.26783133, -3.26783133, -3.26783133, -3.26783133, -3.26783133]), 'bias_s2': array([  3.32216764,   2.32216764,   1.32216764,   0.32216764,\n",
+      "        -0.67783236,  -1.67783236,  -2.67783236,  -3.67783236,\n",
+      "        -4.67783236,  -5.67783236,  -6.67783236,  -7.67783236,\n",
+      "        -8.67783236,  -9.67783236, -10.67783236, -11.67783236,\n",
+      "       -12.67783236, -13.67783236, -14.67783236, -15.67783236,\n",
+      "       -16.67783236, -17.67783236, -18.67783236, -19.67783236,\n",
+      "       -20.67783236, -21.67783236, -22.67783236, -23.67783236,\n",
+      "       -24.67783236, -25.67783236]), 'corr': array([ 0.27977705,  0.27977705,  0.27977705,  0.27977705,  0.27977705,\n",
+      "        0.27977705,  0.27977705,  0.27977705,  0.27977705,  0.27977705,\n",
+      "        0.27977705,  0.27977705,  0.27977705,  0.27977705,  0.27977705,\n",
+      "        0.27977705,  0.27977705,  0.27977705,  0.27977705,  0.27977705,\n",
+      "        0.27977705,  0.27977705,  0.27977705,  0.27977705,  0.27977705,\n",
+      "        0.27977705,  0.27977705,  0.27977705,  0.27977705,  0.27977705]), 'cov': array([ 1.35137376,  1.35137376,  1.35137376,  1.35137376,  1.35137376,\n",
+      "        1.35137376,  1.35137376,  1.35137376,  1.35137376,  1.35137376,\n",
+      "        1.35137376,  1.35137376,  1.35137376,  1.35137376,  1.35137376,\n",
+      "        1.35137376,  1.35137376,  1.35137376,  1.35137376,  1.35137376,\n",
+      "        1.35137376,  1.35137376,  1.35137376,  1.35137376,  1.35137376,\n",
+      "        1.35137376,  1.35137376,  1.35137376,  1.35137376,  1.35137376]), 'var_s1': array([ 4.82147954,  4.82147954,  4.82147954,  4.82147954,  4.82147954,\n",
+      "        4.82147954,  4.82147954,  4.82147954,  4.82147954,  4.82147954,\n",
+      "        4.82147954,  4.82147954,  4.82147954,  4.82147954,  4.82147954,\n",
+      "        4.82147954,  4.82147954,  4.82147954,  4.82147954,  4.82147954,\n",
+      "        4.82147954,  4.82147954,  4.82147954,  4.82147954,  4.82147954,\n",
+      "        4.82147954,  4.82147954,  4.82147954,  4.82147954,  4.82147954]), 'mean_s1': array([-33.26783133, -33.26783133, -33.26783133, -33.26783133,\n",
+      "       -33.26783133, -33.26783133, -33.26783133, -33.26783133,\n",
+      "       -33.26783133, -33.26783133, -33.26783133, -33.26783133,\n",
+      "       -33.26783133, -33.26783133, -33.26783133, -33.26783133,\n",
+      "       -33.26783133, -33.26783133, -33.26783133, -33.26783133,\n",
+      "       -33.26783133, -33.26783133, -33.26783133, -33.26783133,\n",
+      "       -33.26783133, -33.26783133, -33.26783133, -33.26783133,\n",
+      "       -33.26783133, -33.26783133]), 'mean_s2': array([-26.67783236, -26.67783236, -26.67783236, -26.67783236,\n",
+      "       -26.67783236, -26.67783236, -26.67783236, -26.67783236,\n",
+      "       -26.67783236, -26.67783236, -26.67783236, -26.67783236,\n",
+      "       -26.67783236, -26.67783236, -26.67783236, -26.67783236,\n",
+      "       -26.67783236, -26.67783236, -26.67783236, -26.67783236,\n",
+      "       -26.67783236, -26.67783236, -26.67783236, -26.67783236,\n",
+      "       -26.67783236, -26.67783236, -26.67783236, -26.67783236,\n",
+      "       -26.67783236, -26.67783236]), 'var_s2': array([ 4.83889802,  4.83889802,  4.83889802,  4.83889802,  4.83889802,\n",
+      "        4.83889802,  4.83889802,  4.83889802,  4.83889802,  4.83889802,\n",
+      "        4.83889802,  4.83889802,  4.83889802,  4.83889802,  4.83889802,\n",
+      "        4.83889802,  4.83889802,  4.83889802,  4.83889802,  4.83889802,\n",
+      "        4.83889802,  4.83889802,  4.83889802,  4.83889802,  4.83889802,\n",
+      "        4.83889802,  4.83889802,  4.83889802,  4.83889802,  4.83889802])}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print post_stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
